# TypeStudio

./: .gitignore  EditorFuture.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  vitest.config.ts
.github/workflows/: release.yml
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  pdf-viewer.json
src-tauri/resources/templates/acm-paper/: main.md  template.json
src-tauri/resources/templates/cvpr-2025/: content.md  main.typ  refs.bib  template.json
src-tauri/resources/templates/ieee-conference/: main.md  template.json
src-tauri/resources/templates/neurips/: main.md  template.json
src-tauri/resources/templates/plain/: main.md  template.json
src-tauri/src/: ai.rs  converter.rs  lib.rs  lsp_bridge.rs  main.rs  preview_sidecar.rs  typst_world.rs
src-tauri/src/latex_import/: convert.rs  detect.rs  mod.rs  report.rs  tokenizer.rs  unzip.rs
src-tauri/src/latex_import/profiles/: cvpr.rs  mod.rs
src/components/AI/: AIChatPanel.css  AIChatPanel.tsx
src/components/Editor/: FrontmatterPanel.tsx  MarkdownWysiwygEditor.css  MarkdownWysiwygEditor.test.tsx  MarkdownWysiwygEditor.tsx  MonacoEditor.css  MonacoEditor.tsx  SelectionToolbar.css  SelectionToolbar.tsx  SlashMenu.css  (+26 more)
src/hooks/: useLspClient.ts  usePreview.ts
src/lib/: utils.ts
src/stores/: editorStore.test.ts  editorStore.ts
src/test/: setup.ts
tests/: FrontmatterPanel.test.tsx  editorStore.integration.test.ts  fileIcons.test.ts  frontmatterUtil.test.ts  markdownEscapeUtil.test.ts  utils.test.ts
(+34 files in other folders)
