[package]
name = "type-studio"
version = "0.1.0"
description = "Type Studio — A Typst IDE"
authors = ["ruoteng"]
edition = "2021"

[lib]
name = "type_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Async runtime
tokio = { version = "1", features = ["full"] }
# WebSocket server
tokio-tungstenite = { version = "0.26", features = [] }
futures-util = "0.3"
# In-process Typst compiler (incremental via comemo)
typst = "0.13"
typst-svg = "0.13"
typst-assets = { version = "0.13", features = ["fonts"] }
comemo = "0.4"
# LaTeX template import (zipped bundle extraction)
zip = { version = "0.6", default-features = false, features = ["deflate"] }
# AI: HTTP client for Claude API and citation search
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
